--- a/ml.Rmd
+++ b/ml.Rmd
@@ -11,9 +11,11 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Intro
 
-Well, that was underwhelming. I ran two simple ML algorithms (KNN and RF), and even though they differed a lot on their predictions, apparently the one I chose to use as an answer got me 100% without any fine-tuning...
+I ran two simple ML algorithms (KNN and RF), and even though they differed a lot on their predictions, the one I chose to use as an answer (RF) got me 100% accuracy without any fine-tuning...
 
 ```{r}
+setwd("C:/Rprojects/coursera/course8/")
+
 library(dplyr)
 library(data.table)
 library(caret)
@@ -23,51 +25,53 @@ set.seed(123)
 
 ## Loading data and preprocessing:
 
-```{r}
+```{r, cache=T}
 train <- read.csv("pml-training.csv")[, -1]
-test <- read.csv("pml-testing.csv")[, -1]
+pred <- read.csv("pml-testing.csv")[, -1]
 
-na <- colSums(is.na(train)) 
-na <- sapply(train, function(x) sum(is.na(x)))
-na_rm <- names(na[na>20]) # remove variables with lots of NA (one hundred of them)
+na <- colSums(is.na(pred)) 
+na <- sapply(pred, function(x) sum(is.na(x)))
+na_rm <- names(na[na>1]) # remove variables that have NA in the prediction data
 
 train <- train[, -which(names(train) %in% na_rm)]
-test <- test[, -which(names(test) %in% na_rm)]
+pred <- pred[, -which(names(pred) %in% na_rm)]
+
+train_test <-  sample(1:nrow(train), 16000) #approximately 80-20% split
+test <- train[-train_test, ]
+train <- train[train_test, ]
+
 ```
 
 ## Modelling:
 
-The first model is not run because it's taking me time to prepare the html file
-
 ```{r}
-train(classe ~ ., data = train, method = "knn", 
-             tuneGrid = expand.grid(k=1:20),
-             trControl = trainControl(method = "LGOCV", p = 0.8, number = 1,
-                                      savePredictions = T))
+mod1 <-  train(classe ~ ., data = train, method = "knn", 
+              tuneGrid = expand.grid(k=1:20),
+              trControl = trainControl(method = "LGOCV", p = 0.8, number = 1,
+                                       savePredictions = T))
 
 mod2 <- train(classe ~ ., data = train, method = "rf", 
-              #tuneGrid = expand.grid(k=1:20, .mtry=5),
-              trControl = trainControl(method = "repeatedcv", number = 5,
+              tuneGrid = expand.grid(.mtry=5),
+              trControl = trainControl(method = "cv", number = 5,
                                        savePredictions = T, allowParallel = TRUE))
+ 
+```
 
-pred1 <- predict(mod1, test)
-pred2 <- predict(mod2, test)
-pred1==pred2 # to see how the predictions compared. I ended up submitting the answers from the RF model
+# Model selection
+
+```{r}
+test_pred_knn <- predict(mod1, test)
+test_pred_rf <- predict(mod2, test)
+sum(test_pred_knn==test$classe)/length(test_pred_knn)
+sum(test_pred_rf==test$classe)/length(test_pred_rf) # RF model was way more accurate out of sample
+ 
+ pred1 <- predict(mod1, pred)
+ pred2 <- predict(mod2, pred)
+ pred1==pred2 # to see how the predictions compared. I ended up submitting the answers from the RF model
 ```
 
 # My predictions:
 
 ```{r}
 pred2
-```
-
-I had considered trying PCA for dimensionality reduction, but I guess it wasn't necessary
-
-```{r}
-#preproc_pca <-  preProcess(train, method="pca", thresh=0.99)
-#trainpca <- predict(preproc_pca, subset(train, select = -c(classe)))
-
-#modelPCA<- train(x = trainpca, y = train$classe, method="glm")
-#modelPCAresult <- confusionMatrix(new_testing$problem_id,predict(model_with_PCA, newdata=testPC))
-#modelPCAresult -->
 ```
